[package]
name = "functils"
version = "0.0.2"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Functions to make Rust more functional"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/functils"
homepage = "https://github.com/mgattozzi/functils"
repository = "https://github.com/mgattozzi/functils"
readme = "README.md"

[dependencies]
kinder = "0.1.1"
